# GII-Grocery-Intelligence-Index

./: README.md  databricks.yml  pyproject.toml
.github/workflows/: ci.yml
Bronze/: 01.bronze.ipynb  01_bronze_grocery_prices.ipynb
Gold/: 01.gold.ipynb  03_gold_grocery_prices.ipynb
Silver/: 02_silver_grocery_prices.ipynb
docs/: data-contract.md
jobs/: bronze_job.py  gold_job.py  silver_job.py
resources/: grocery_pipeline.job.yml
src/grocery_index/: __init__.py  bronze.py  config.py  gold.py  quality.py  silver.py
tests/: conftest.py  test_gold.py  test_silver.py
