[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "grocery-intelligence-index"
version = "0.1.0"
description = "Testable PySpark transformations for the Grocery Intelligence Index"
requires-python = ">=3.10"
dependencies = ["pyspark>=3.5,<4"]

[project.optional-dependencies]
dev = ["build>=1.2", "pytest>=8,<9", "ruff>=0.9,<1"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

